--- a/apps/jobs/views/index.ejs
+++ b/apps/jobs/views/index.ejs
@@ -19,10 +19,11 @@
 						<img src="/img/jobs/page01-01.png" alt="">
 					</div>
 
-					<div class="ad">
-						<img src="/img/jobs/down.png" alt="">
+					<div class="touchstyle-arrowup"
+						style="opacity: 0; -webkit-animation: touchstyle-arrow-animate 2s infinite;">
 					</div>
 				</div>
+
 				<div class="bg bg-2" data="2" id="bg-2">
 					<div class="bg-2-1">
 						<div class="bg-2-1-1">
@@ -36,10 +37,11 @@
 						</div>
 					</div>
 
-					<div class="ad">
-						<img src="/img/jobs/down.png" alt="">
+					<div class="touchstyle-arrowup"
+						style="opacity: 0; -webkit-animation: touchstyle-arrow-animate 2s infinite;">
 					</div>
 				</div>
+
 				<div class="bg bg-3" data="3" id="bg-3">
 					<div class="bg3 bg-3-1">
 						<img src="/img/jobs/page03-01.png" alt="">
@@ -57,10 +59,11 @@
 						<img src="/img/jobs/page03-04.png" alt="">
 					</div>
 
-					<div class="ad">
-						<img src="/img/jobs/down.png" alt="">
+					<div class="touchstyle-arrowup"
+						style="opacity: 0; -webkit-animation: touchstyle-arrow-animate 2s infinite;">
 					</div>
 				</div>
+
 				<div class="bg bg-4" data="4" id="bg-4">
 					<div class="bg-4-1">
 						<div class="bg-4-1-1">
@@ -71,16 +74,10 @@
 						</div>
 					</div>
 
-					<div class="ad">
-						<a href="/jobs/list" style="display: block;">
-							<img src="/img/jobs/down.png" alt="" style="pointer-events:none;">
-						</a>
-					</div>
+					<a href="/jobs/list" id="view_pos_list">查看职位列表</a>
 				</div>
 			</div>
 		</div>
-
-
 
 		<div id="loading" style="display: block;">
 			<div class="spinner">
