--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -271,6 +271,27 @@ font-size: 0.8rem;
 	border:0;
 }
 
+.bg-31 {
+	background: url(../img/jobs/bg03.png) no-repeat center;
+	background-size: cover;
+	z-index: 97;
+	border:0;
+}
+
+.bg-32 {
+	background: url(../img/jobs/bg03.png) no-repeat center;
+	background-size: cover;
+	z-index: 97;
+	border:0;
+}
+
+.bg-33 {
+	background: url(../img/jobs/bg03.png) no-repeat center;
+	background-size: cover;
+	z-index: 97;
+	border:0;
+}
+
 .bg-4 {
 	background: url(../img/jobs/bg04.png) no-repeat center;
 	background-size: cover;
@@ -309,13 +330,16 @@ font-size: 0.8rem;
 }
 
 .bg3 {
-	display: none;
 	text-align: center;
 	margin-top: 35%;
 }
 
 .bg3 img {
 	width: 78%;
+}
+
+.bg-3-2 img {
+	width: 84%;
 }
 
 .bg-3-3 {
