--- a/apps/jobs/views/list.ejs
+++ b/apps/jobs/views/list.ejs
@@ -21,17 +21,22 @@
 		<script src="/js/jquery-2.1.1.min.js"></script>
 		<script src="/js/jquery.mobile-1.4.5.min.js"></script>
 		<script src="/js/WeixinApi.js"></script>
+		<script src="/js/dcagent.min.js?v=9"></script>
 		<script>
-	    // 微信分享的数据
-	    var wxData = {
-	        "imgUrl" : 'http://career.gdatacube.net/img/jobs/dataeye.jpg',
-	        "link" : 'http://career.gdatacube.net/jobs',
-	        "desc" : '专业的人做专注的事,精细化运营助力精品游戏。现在就加入DataEye，和数据大咖共事，与游戏战队共娱，携先锋部队共战',
-	        "title" : "全球猎Eye, DataEye需要你"
-	    }
-			WeixinApi.share(wxData, {})
-
 			$(function() {
+				DCAgent.init({
+          appId: '4DFD99AC805A9918AD5B8AB2016EC322'
+				}, function(deviceId) {
+					var shareUrl = 'http://career.gdatacube.net/jobs'
+			    // 微信分享的数据
+			    var wxData = {
+		        "imgUrl" : 'http://career.gdatacube.net/img/jobs/dataeye.jpg',
+		        "link" : shareUrl + '#' + deviceId,
+		        "desc" : '专业的人做专注的事,精细化运营助力精品游戏。现在就加入DataEye，和数据大咖共事，与游戏战队共娱，携先锋部队共战',
+		        "title" : "全球猎Eye, DataEye需要你"
+			    }
+					WeixinApi.share(wxData, {})
+				})
 
 				$('#contact').on('pagebeforeshow', function(e, data) {
 					var posName = data.prevPage.find('.pos-wrap h3').text()
