add ui designer

--- a/apps/jobs/views/incs/position_type.ejs
+++ b/apps/jobs/views/incs/position_type.ejs
@@ -114,6 +114,11 @@
 				    社区运营专员
 				  </a>
 				</span>
+				<span class="job_box">
+				  <a href="#uix" class="job_box_inner">
+			    	UI设计师
+				  </a>
+				</span>
 			</div>
 		</div>
 </section>
