--- a/apps/jobs/views/incs/positions.ejs
+++ b/apps/jobs/views/incs/positions.ejs
@@ -393,3 +393,29 @@
 	<% include ./footer.ejs %>
 </section>
 
+<section class="pages-position" id="uix" data-role="page">
+	<% include ./banner.ejs %>
+
+	<div class="pos-wrap">
+		<h3>UI设计师</h3>
+		<div>
+				<strong>职位描述：</strong>
+				<ol>
+					<li>负责网站及手机项目页面主体框架的搭建及整体效果的平面设计</li>
+					<li>负责与开发人员配合完成页面的整体调整和样式美化</li>
+					<li>负责设计制作各类标志，按钮，图标</li>
+					<li>对公司的宣传广告进行美工设计</li>
+					<li>其他与美术设计相关的工作</li>
+				</ol>
+				<strong>职位要求：</strong>
+				<ol>
+					<li>一年以上网页设计工作经验</li>
+					<li>有扎实的美术功底和独到的审美观念，具备较强的分析设计能力和方案整合能力</li>
+					<li>有门户级网站设计经验的优先</li>
+					<li>个性乐观开朗，有良好的沟通能力、团队合作能力、高度的责任感和工作压力承受能力</li>
+				</ol>
+		</div>
+	</div>
+	<% include ./footer.ejs %>
+</section>
+
