--- a/apps/jobs/views/index.ejs
+++ b/apps/jobs/views/index.ejs
@@ -9,7 +9,7 @@
 		<meta name="apple-touch-fullscreen" content="yes" />
 		<meta name="format-detection" content="telephone=no,email=no" />
 		<title>加入DataEye</title>
-		<link rel="stylesheet" href="/css/jobs.css?v=4">
+		<link rel="stylesheet" href="/css/jobs.css?v=5">
 		<!-- <link rel="stylesheet" href="/css/animate.min.css"> -->
 	</head>
 	<body>
@@ -17,7 +17,7 @@
 			<div class="bg-wrapper">
 				<div class="bg bg-1" data="1" id="bg-1">
 					<div class="bgc bg-1-1">
-						<img data-src="/img/jobs/page01-01.png" alt="">
+						<img data-src="/img/jobs/page01-01.png?t=2" alt="">
 					</div>
 
 					<div class="touchstyle-arrowup"
@@ -28,13 +28,13 @@
 				<div class="bg bg-2" data="2" id="bg-2">
 					<div class="bgc bg-2-1">
 						<div class="bg-2-1-1">
-							<img data-src="/img/jobs/page02-01.png" alt="">
+							<img data-src="/img/jobs/page02-01.png?t=2" alt="">
 						</div>
 						<div class="bg-2-1-2">
-							<img data-src="/img/jobs/page02-02.png" alt="">
+							<img data-src="/img/jobs/page02-02.png?t=2" alt="">
 						</div>
 						<div class="bg-2-1-3">
-							<img data-src="/img/jobs/page02-03.png" alt="">
+							<img data-src="/img/jobs/page02-03.png?t=2" alt="">
 						</div>
 					</div>
 
@@ -45,7 +45,7 @@
 
 				<div class="bg bg-3" data="3" id="bg-3">
 					<div class="bgc bg3 bg-3-1">
-						<img data-src="/img/jobs/page03-01.png" alt="">
+						<img data-src="/img/jobs/page03-01.png?t=2" alt="">
 					</div>
 					<div class="touchstyle-arrowup"
 						style="opacity: 0; -webkit-animation: touchstyle-arrow-animate 2s infinite;">
@@ -54,7 +54,7 @@
 
 				<div class="bg bg-31" id="bg-31">
 					<div class="bgc bg3 bg-3-2">
-						<img data-src="/img/jobs/page03-02.png" alt="">
+						<img data-src="/img/jobs/page03-02.png?t=2" alt="">
 					</div>
 					<div class="touchstyle-arrowup"
 						style="opacity: 0; -webkit-animation: touchstyle-arrow-animate 2s infinite;">
@@ -63,10 +63,10 @@
 
 				<div class="bg bg-32" id="bg-32">
 					<div class="bgc bg3 bg-3-3">
-						<img data-src="/img/jobs/page03-03.png" alt="">
+						<img data-src="/img/jobs/page03-03.png?t=2" alt="">
 					</div>
 					<div class="bgc bg3 bg-3-4">
-						<img data-src="/img/jobs/page03-04.png" alt="">
+						<img data-src="/img/jobs/page03-04.png?t=2" alt="">
 					</div>
 
 					<div class="touchstyle-arrowup"
@@ -77,10 +77,10 @@
 				<div class="bg bg-4" data="4" id="bg-4">
 					<div class="bgc bg-4-1">
 						<div class="bg-4-1-1">
-							<img data-src="/img/jobs/page04-01.png" alt="">
+							<img data-src="/img/jobs/page04-01.png?t=2" alt="">
 						</div>
 						<div class="bgc bg-4-1-2">
-							<img data-src="/img/jobs/page04-02.png" alt="">
+							<img data-src="/img/jobs/page04-02.png?t=2" alt="">
 						</div>
 					</div>
 
