--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -70,7 +70,7 @@ padding:1rem 0;
 }
 
 .pages-position .banner {
-	background: url(../img/jobs/bg05.png?t=2) no-repeat center;
+	background: url(../img/jobs/bg05.jpg?t=2) no-repeat center;
 	background: cover;
 }
 
