--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -70,7 +70,7 @@ padding:1rem 0;
 }
 
 .pages-position .banner {
-	background: url(../img/jobs/bg05.jpg?t=2) no-repeat center;
+	background: url(../img/jobs/bg05.jpg?t=3) no-repeat center;
 	background: cover;
 }
 
@@ -246,10 +246,12 @@ font-size: 0.8rem;
 	left: 0;
 	width: 100%;
 	overflow: hidden;
+	-webkit-transition: all 400ms ease;
+	transition: all 400ms ease;
 }
 
 .bg-1 {
-	background: url(../img/jobs/bg01.jpg?t=2) no-repeat center;
+	background: url(../img/jobs/bg01.jpg?t=3) no-repeat center;
 	background-size: cover;
 	z-index: 99;
 	border:0;
@@ -258,42 +260,42 @@ font-size: 0.8rem;
 .bg-2 {
 	/*background: url(../img/jobs/bg02.png) no-repeat center top , url(../img/jobs/bg02-0.png) no-repeat center;*/
 	/*background-size: contain, cover;*/
-	background: url(../img/jobs/bg02.jpg?t=2) no-repeat center;
+	background: url(../img/jobs/bg02.jpg?t=3) no-repeat center;
 	background-size: cover;
 	z-index: 98;
 	border:0;
 }
 
 .bg-3 {
-	background: url(../img/jobs/bg03.jpg?t=2) no-repeat center;
+	background: url(../img/jobs/bg03.jpg?t=3) no-repeat center;
 	background-size: cover;
 	z-index: 97;
 	border:0;
 }
 
 .bg-31 {
-	background: url(../img/jobs/bg03.jpg?t=2) no-repeat center;
+	background: url(../img/jobs/bg03.jpg?t=3) no-repeat center;
 	background-size: cover;
 	z-index: 97;
 	border:0;
 }
 
 .bg-32 {
-	background: url(../img/jobs/bg03.jpg?t=2) no-repeat center;
+	background: url(../img/jobs/bg03.jpg?t=3) no-repeat center;
 	background-size: cover;
 	z-index: 97;
 	border:0;
 }
 
 .bg-33 {
-	background: url(../img/jobs/bg03.jpg?t=2) no-repeat center;
+	background: url(../img/jobs/bg03.jpg?t=3) no-repeat center;
 	background-size: cover;
 	z-index: 97;
 	border:0;
 }
 
 .bg-4 {
-	background: url(../img/jobs/bg04.jpg?t=2) no-repeat center;
+	background: url(../img/jobs/bg04.jpg?t=3) no-repeat center;
 	background-size: cover;
 	z-index: 96;
 	border:0;
@@ -389,7 +391,6 @@ font-size: 0.8rem;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
-
 
 .pull-left {
 	float: left;
